[package]
name = "eth-rpc"
version = "0.1.0"
authors = ["Buffalo Lv"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
jsonrpc-http-server = "14.1"
jsonrpc-derive = "14.1"
jsonrpc-core = "14.1"
ethereum-types = "0.9.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rustc-hex = "2.1.0"
ansi_term = "0.11"



[dev-dependencies]
env_logger = "0.7"