[package]
name = "web3test"
version = "0.1.0"
authors = ["lvqinghao <lvqinghao@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.0"
