[package]
name = "bloom-rpc"
version = "0.1.0"
authors = ["LiuZhuo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
jsonrpc-http-server = "14.1"
jsonrpc-derive = "14.1"
jsonrpc-core = "14.1"
ethereum-types = "0.9.2"
serde_json = "1.0"
rustc-hex = "2.1.0"
ansi_term = "0.11"
hex-literal = "0.3.1"


[dev-dependencies]
env_logger = "0.7"
